# bleak-connection-manager

./: .gitignore  README.md  pyproject.toml
docs/: shared-ble-scanner-research.md
src/bleak_connection_manager/: __init__.py  adapters.py  bluez.py  connection.py  const.py  dbus_bus.py  diagnostics.py  hci.py  lock.py  recovery.py  scan_lock.py  scanner.py  validators.py  watchdog.py
tests/: test_adapters.py  test_bluez.py  test_connection.py  test_const.py  test_dbus_bus.py  test_diagnostics.py  test_hci.py  test_lock.py  test_recovery.py  test_scan_lock.py  test_scanner.py  test_validators.py  test_watchdog.py
